1.1 (PENDING, not yet released)
- updated jquery to 1.4.2, ui to 1.8.4 (which fixes the 'destroy problem: #94, #114, #115, #121)
- if firstItemChecksAll is true and all items EXCEPT the first are checked, then autocheck the first (#62)
- treat maxDropHeight as a 'max', not as 'fixed' (#77)
- include simple vertical alignment css to try to address field positioning (#110)
- account for tab out of open dropdown control, and various other key issues (#84)
- assign ids to the generated elements for access by other jQuery processing, and keep the various ids
  unique (#97, #107, #111)
- copy the tabindex of the underlying select if provided (#100)
- provide option to auto-close dropdown when a singleton radio button is clicked (#57, #120)
- if optgroup is disabled, all child items are disabled (#72)
- optgroup without a label (#59)

1.0
- rework CSS tagging to utilize jQuery ThemeRoller settings
- added onComplete callback option (blur does not fire)
- added forceMultiple option (known restriction for IE6)
- added icon option (ThemeRoller based)
- explicit open/close rather than toggle to keep dropdown state correct
- limited use of inline-block (known cross-browser issues)
- try/catch to protect against callback failures
- various cleanup to suppress cross-talk between multiple dropdowns on same page
- made generated item ids more unique to keep from colliding with parent ids
- fixed many keyboard handling issues -- but tab out of the dropdown is still incomplete
  (radiobuttons, checkboxes must be disabled to keep them out of tab order)
- created 'doc' as independent directory under version control
  (easier to keep doc page reflecting current release rather than pending work-in-progress)
- callout to explicit versions of jquery core and ui to better track testing environment

0.9
- fixed some warnings for unused variabled with yui processor (#52)
- added patch from munkyboy to aoutomatically syncronize with the source select value changes (#48)