@@ -1,5 +1,5 @@
 1.1 (PENDING, not yet released)
-- updated jquery to 1.4.2, ui to 1.8.4 (which fixes the 'destroy problem: #94, #114, #115, #121)
+- updated jquery to 1.4.2, ui to 1.8.4 (which fixes the 'destroy' problem: #94, #114, #115, #121)
 - if firstItemChecksAll is true and all items EXCEPT the first are checked, then autocheck the first (#62)
 - treat maxDropHeight as a 'max', not as 'fixed' (#77)
 - include simple vertical alignment css to try to address field positioning (#110)
@@ -10,6 +10,7 @@
 - provide option to auto-close dropdown when a singleton radio button is clicked (#57, #120)
 - if optgroup is disabled, all child items are disabled (#72)
 - optgroup without a label (#59)
+- 'refresh' function to resynch with selected and disabled state of underlying <select> items (#99,#116,#121)
 
 1.0
 - rework CSS tagging to utilize jQuery ThemeRoller settings
